 - Nerfed Foresight's MP cost to 12 MP (was originally 8 MP).
 - Nerfed Inspire's effect to +10% ATK and MAT (was originally +12%).
 - Nerfed Lightning II's MP cost to 30 MP (was originally 22 MP).
 - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff MDF.

RNG Balancing:
 - Made a lot of mechanics based around rare enemies less grindy.
  ~ Doubled the base chance of encountering a rare enemy.
  ~ As rare enemy spawns fail, the spawn chance will increase exponentially, being reset once a rare enemy finally spawns.
  ~ Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
  ~ The Albino Rat and Strange Goblin have been rebalanced to be around the same difficulty as the Rainbow Slime.
 - Buffed the drop rate of all resistance accessories from 2% to 3.33%.

Miscellaneous Balancing:
 - Nerfed the critical hit damage formula.
  ~ Original: 2.0 * (Math.max(1.0, user.int / 40));
  ~ New:      1.0 + user.int / 40;
 - You can no longer equip more than one of the same accessory on a single party member.
 - State resistance accessories no longer remove already applied states when equipped.
 - All party members now gain +1 INT per 5 levels, for a total of +20 INT at level 100.
 - Skill mastery's effect is 1.5x what it was previously, meaning damage can be increased up to +30% and MP cost can be decreased down to -30%.
 - Status effects that provide MHP/MMP no longer reduce HP/MP after wearing off.
 - Henry can now be killed without entering his second phase; however, he now enters his second phase at 40% HP instead of 30%.
 - Reduced every level up EXP requirement by 20, making it much easier to level up in the early-game.
 - Greatly increased the acceleration of the EXP curve at later levels. Barely affects the game now with such a low level cap, but will help prevent leveling up from becoming trivial in the late/end-game.
 - Doubled Well Rested's step duration from 500 to 1000.