@@ -461,6 +461,9 @@ Skill Balancing:
  - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff MDF.
 
 RNG Balancing:
+ - Elements have been heavily revamped. Some of the major changes include:
+  ~ Less standardization so each element has unique behaviors instead of being cookie-cutter
+  ~ Elemental states no longer apply the damage rates of their element
  - Made a lot of mechanics based around rare enemies less grindy.
   ~ Doubled the base chance of encountering a rare enemy.
   ~ As rare enemy spawns fail, the spawn chance will increase exponentially, being reset once a rare enemy finally spawns.
